[package]
name = "box_stream"
version = "0.4.0"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
description = "Implementation of the box-stream encryption protocol."
repository = "https://github.com/AljoschaMeyer/box-stream-rs"
readme = "README.md"
license = "GPL-3.0"

[dependencies]
libc = "0.2"
libsodium-sys = "0.0.16"
sodiumoxide = "0.0.16"
tokio-io = "0.1.2"
futures = "0.1.14"
atm-io-utils = "0.1.0"

[dev-dependencies]
partial-io = { version = "0.2.5", features = ["quickcheck", "tokio"] }
quickcheck = "0.4.1"
async-ringbuffer = "0.1.0"
rand = "0.3"

[build-dependencies]
cc = "1.0.0"
