[package]
name = "box_stream"
version = "0.5.0"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
description = "Implementation of the box-stream encryption protocol."
repository = "https://github.com/AljoschaMeyer/box-stream-rs"
readme = "README.md"
license = "AGPL-3.0"

[dependencies]
libc = "0.2"
libsodium-sys = "0.0.16"
sodiumoxide = "0.0.16"
futures-core = "0.2.0-alpha"
futures-io = "0.2.0-alpha"

[dev-dependencies]
async-ringbuffer = "0.3.0"
atm-io-utils = "0.2.0"
futures = "0.2.0-alpha"

[build-dependencies]
cc = "1.0.0"
